base template files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-# DineshVideo.github.io
+---
+layout: default
+browser_title: Dinesh Video team
+---
+
+<div class="container">
+  <div class="welcome-note">
+     <img 
+    src="{{ '/assets/images/team-banner.jpg' | prepend: site.baseurl | prepend: site.url }}"
+    alt="{{ site.title }}" />
+    <div class="welcome-note-content">
+      <h1>
+        Dinesh video team's official website is coming soon.      
+      </h1>
+    </div>
+  </div>
+</div>
+<script type="application/ld+json">
+{
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "url": "{{ '' | prepend: site.baseurl | prepend: site.url | append: '/' }}"
+    }
+}
+</script>
