--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@ layout: default
 browser_title: Dinesh Video team
 ---
 
-<div class="container">
-  <div class="welcome-note">
-     <img 
+<img 
     src="{{ '/assets/images/team-banner.jpg' | prepend: site.baseurl | prepend: site.url }}"
     alt="{{ site.title }}" />
-    <div class="welcome-note-content">
-      <h1>
-        Dinesh video team's official website is coming soon.      
-      </h1>
-    </div>
-  </div>
+
+<div class="live-show-banner">
+  <a href="{{ '/live/' | prepend: site.baseurl | prepend: site.url }}">
+  Watch out live video stream
+  <i class="fa fa-youtube-play"></i>
+  </a>
 </div>
+
 <script type="application/ld+json">
 {
     "@context": "http://schema.org",
