Add live video page

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Next Event
+title: Contact us
 permalink: /contact/
 ---
 
@@ -12,19 +12,19 @@ permalink: /contact/
   <div class="contact-us-item">
   <h3>Address</h3>
   <address>
-    <strong>Dinesh Video Team </strong><br/>
+    <strong>Dinesh Video Team</strong><br/>
     Katana
   </address>  
   </div>
   <div class="contact-us-item">
     <h3>Contact</h3>
-    <p class="contact-number"><i class="fa fa-phone"></i>+94771231234</p>
-    <p class="contact-number"><i class="fa fa-phone"></i>+94771231235</p>
+    <p class="contact-number"><i class="fa fa-phone"></i>+94776295472</p>
+    <p class="contact-number"><i class="fa fa-phone"></i>+94778539299</p>
   </div>
   <div class="contact-us-item">
     <h3>Email</h3>
     <p class="contact-number"><i class="fa fa-envelope"></i>
-    <a href="mailto:dineshvideoteam@gmail.com">dineshvideo@gmail.com</a>
+    <a href="mailto:dineshvideoteam@gmail.com">dineshvideoteam@gmail.com</a>
     </p>
   </div>
 </div>
@@ -36,12 +36,12 @@ permalink: /contact/
 
 <div class="contact-us-social-media-links">
   <div>
-  <a class="facebook-link" href="https://www.facebook.com/dinesh.videoteam" target="_blank">
+  <a class="facebook-link" href="https://www.facebook.com/dinesh.videoteam" target="_blank" title="Follow {{ site.title }} on facebook">
     <i class="fa fa-facebook-square"></i>  
   </a>
   </div>
   <div>
-    <a class="youtube-link" href="https://www.youtube.com/" target="_blank">
+    <a class="youtube-link" href="https://www.youtube.com/" target="_blank"  title="Follow {{ site.title }} on youtube">
       <i class="fa fa-youtube-square"></i>  
     </a>
   </div>
