--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@ browser_title: Dinesh Video team
 <img 
     src="{{ '/assets/images/team-banner.jpg' | prepend: site.baseurl | prepend: site.url }}"
     alt="{{ site.title }}" />
-
+    
 <div class="live-show-banner">
   <a href="{{ '/live/' | prepend: site.baseurl | prepend: site.url }}">
-  Watch out live video stream
-  <i class="fa fa-youtube-play"></i>
+  Watch our live video stream
+  <i class="fa fa-youtube-play blink"></i>
   </a>
+</div>
+
+<div class="key-points">
+  <ul class="key-points-wrapper">
+    <li class="key-point"><i class="fa fa-check"></i>On stage musical shows</li>
+    <li class="key-point"><i class="fa fa-check"></i>Weddings</li>
+    <li class="key-point"><i class="fa fa-check"></i>Parties</li>
+    <li class="key-point"><i class="fa fa-check"></i>Events</li>
 </div>
 
 <script type="application/ld+json">
