--- a/live/index.html
+++ b/live/index.html
@@ -7,3 +7,5 @@ permalink: /live/
 <h3>Oops sorry! Currently we are off-line. </h3>
 
 <p>Hope to serve you soon with a nice live musical event. Thanks</p>
+
+<!-- {% include video.html video = '<iframe  src="https://www.youtube.com/embed/NOqIMIxJ6b0" frameborder="0" allowfullscreen></iframe>' %}  -->
