Add service points

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ browser_title: Dinesh Video team
 </div>
 
 <div class="key-points">
+  <h2>Video recording for: </h2>
   <ul class="key-points-wrapper">
     <li class="key-point"><i class="fa fa-check"></i>On stage musical shows</li>
     <li class="key-point"><i class="fa fa-check"></i>Weddings</li>
