--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -17,7 +17,7 @@ permalink: /contact/
   </address>  
   </div>
   <div class="contact-us-item">
-    <h3>Contact</h3>
+    <h3>Call us on</h3>
     <p class="contact-number"><i class="fa fa-phone"></i>+94776295472</p>
     <p class="contact-number"><i class="fa fa-phone"></i>+94778539299</p>
   </div>
