remove blink styles from live video link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ browser_title: Dinesh Video team
 <div class="live-show-banner">
   <a href="{{ '/live/' | prepend: site.baseurl | prepend: site.url }}">
   Watch our live video stream
-  <i class="fa fa-youtube-play blink"></i>
+  <i class="fa fa-youtube-play"></i>
   </a>
 </div>
 
