--- a/live/index.html
+++ b/live/index.html
@@ -5,7 +5,7 @@ permalink: /live/
 ---
 
 <h3> ගම්මඩු උත්සවය. </h3>
-
+ විවේකය...රැදී සිටින්න සිටින්න අප සමග සමග...
 <!-- <p>Hope to serve you soon with a nice live musical event. Thanks</p> -->
 
 {% include video.html video = '<iframe width="640" height="400" src="https://www.youtube.com/embed/F2EHq21uyLU" frameborder="0" allowfullscreen></iframe>' %}
