--- a/live/index.html
+++ b/live/index.html
@@ -7,4 +7,4 @@ permalink: /live/
 <h3> ගම්මඩු උත්සවය. </h3>
  <!-- <p>Hope to serve you soon with a nice live musical event. Thanks</p> -->
 
-{% include video.html video = '<iframe width="640" height="360" src="https://www.youtube.com/embed/lA4WuKcs0-k?feature=player_embedded" frameborder="0" allowfullscreen></iframe>' %}
+{% include video.html video = '2nd session' %}
