--- a/live/index.html
+++ b/live/index.html
@@ -4,8 +4,8 @@ title: Live Broadcast
 permalink: /live/
 ---
 
-<h3> ගම්මඩු උත්සවය. </h3>
+<h3> Wedding Funtion. </h3>
  <!-- <p>Hope to serve you soon with a nice live musical event. Thanks</p> -->
 
-{% include video.html video = '<iframe width="640" height="360" src="https://www.youtube.com/embed/_ybz5GWFVtY?feature=player_embedded" frameborder="0" allowfullscreen></iframe>' %}
+{% include video.html video = '<iframe width="640" height="360" src="https://www.youtube.com/embed/km-MFtMNfoQ?feature=player_embedded" frameborder="0" allowfullscreen></iframe>' %}
 
