--- a/live/index.html
+++ b/live/index.html
@@ -7,5 +7,5 @@ permalink: /live/
 <h3> Wedding Funtion. </h3>
  <!-- <p>Hope to serve you soon with a nice live musical event. Thanks</p> -->
 
-{% include video.html video = '<iframe width="640" height="360" src="https://www.youtube.com/embed/O_BXdHKnaW0?feature=player_embedded" frameborder="0" allowfullscreen></iframe>' %}
+{% include video.html video = '<iframe width="640" height="360" src="https://www.youtube.com/embed/j8aE8PzOclw?feature=player_embedded" frameborder="0" allowfullscreen></iframe>' %}
 
